InsuranceOrg/force-app/main/default/objects/vlocity_ins__DrugInteraction__c/vlocity_ins__DrugInteraction__c.object-meta.xml
<CustomObject>
    <description>This object will capture interactions between Drugs.</description>
    <label>Drug Interaction</label>
    <nameField>
        <label>Drug Interaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Drug Interactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>