InsuranceOrg/force-app/main/default/objects/vlocity_ins__DrugInteraction__c/fields/vlocity_ins__PrimaryDrugId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PrimaryDrugId__c</fullName>
    <description>The primary or parent Drug for which the interaction is represented here.</description>
    <label>Primary Drug</label>
    <referenceTo>vlocity_ins__Drug__c</referenceTo>
    <relationshipLabel>Drug Interactions (Primary Drug)</relationshipLabel>
    <relationshipName>DrugInteractionsPrimaryDrug</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>