InsuranceOrg/force-app/main/default/objects/vlocity_ins__DrugInteraction__c/fields/vlocity_ins__PrimaryDrugName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PrimaryDrugName__c</fullName>
    <description>The name of the Primary Drug.</description>
    <formula>IF(vlocity_ins__PrimaryDrugId__r.vlocity_ins__TradeName__c!=&quot;&quot;, vlocity_ins__PrimaryDrugId__r.vlocity_ins__TradeName__c, vlocity_ins__PrimaryDrugId__r.vlocity_ins__GenericName__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Drug Name</label>
    <type>Text</type>
</CustomField>