InsuranceOrg/force-app/main/default/objects/vlocity_ins__DrugInteraction__c/fields/vlocity_ins__RelatedDrugId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__RelatedDrugId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Drug that has the interaction to the primary Drug.</description>
    <label>Related Drug</label>
    <referenceTo>vlocity_ins__Drug__c</referenceTo>
    <relationshipLabel>Drug Interactions (Related Drug)</relationshipLabel>
    <relationshipName>DrugInteractionsRelatedDrug</relationshipName>
    <type>Lookup</type>
</CustomField>