InsuranceOrg/force-app/main/default/objects/vlocity_ins__DrugInteraction__c/fields/vlocity_ins__RelatedDrugName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__RelatedDrugName__c</fullName>
    <description>The name of the related drug that has the interaction with the primary drug.</description>
    <formula>IF(vlocity_ins__RelatedDrugId__r.vlocity_ins__TradeName__c!=&quot;&quot;, vlocity_ins__RelatedDrugId__r.vlocity_ins__TradeName__c, vlocity_ins__RelatedDrugId__r.vlocity_ins__GenericName__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Drug Name</label>
    <type>Text</type>
</CustomField>